--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev --turbo": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start --turbopack",
+    "start --turbo": "next start --turbopack",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "@sentry/nextjs": "^9.18.0",
     "clsx": "^2.1.1",
     "motion": "^12.11.0",
     "next": "15.3.2",
